--- a/src/public/styles/_tooltip.scss
+++ b/src/public/styles/_tooltip.scss
@@ -4,7 +4,7 @@
 .tooltip {
   @extend .cell;
   @extend .shadow-z2;
-  color: rgba(35, 50, 64, .7);
+  color: rgba($secondary, .7);
   display: inline-block;
   font-size: 1.2rem;
   padding: .8rem 1.2rem;
@@ -32,7 +32,7 @@
 
 .tooltip-menu-link {
   @include anim(background);
-  color: rgba(35, 50, 64, .7);
+  color: rgba($secondary, .7);
   display: block;
   font-size: 1.25rem;
   padding: .4rem 2.4rem;
@@ -40,6 +40,6 @@
 }
 
 .tooltip-menu-link:hover {
-  background: rgba(28, 109, 226, .05);
-  color: rgba(35, 50, 64, .7);
+  background: rgba($primary, .05);
+  color: rgba($secondary, .7);
 }
