--- a/src/public/styles/_form.scss
+++ b/src/public/styles/_form.scss
@@ -18,7 +18,8 @@ select {
   @extend .round;
   background: $white;
   border: 1px solid rgba($secondary, .2);
-  font-size: 1.2rem;
+  color: rgba($black, .4);
+  font-size: 1.1rem;
   font-weight: $regular;
   margin: 0;
 }
