--- a/src/public/styles/_modal.scss
+++ b/src/public/styles/_modal.scss
@@ -26,7 +26,7 @@
   @extend .shadow-z2;
   display: inline-block;
   max-width: 46.4rem;
-  position: relative;
+  position: absolute;
   z-index: 1;
 }
 
