--- a/src/public/styles/_button.scss
+++ b/src/public/styles/_button.scss
@@ -69,7 +69,7 @@ button[disabled] {
 
 .btn.btn-link {
   color: $primary;
-  background: $white;
+  background: transparent;
   font-weight: $regular;
 }
 
