Adds page margin bottom

--- a/src/public/styles/docs.scss
+++ b/src/public/styles/docs.scss
@@ -1,3 +1,7 @@
+.wrap {
+  margin-bottom: 3.2rem;
+}
+
 /* Columns
    ========================================================================== */
 
