Fixes mysterious space between <li>'s Closes #20

--- a/src/public/styles/components/_navigation.scss
+++ b/src/public/styles/components/_navigation.scss
@@ -8,12 +8,14 @@
 }
 
 .topbar-list {
+  font-size: 0;
   list-style: none;
   padding: 2rem 0;
 }
 
 .topbar-item {
   display: inline-block;
+  font-size: 1.4rem;
   margin: 0 2rem;
 }
 
