--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -1,16 +1,4 @@
-/* ==========================================================================
-   Variables
-   ========================================================================== */
-
-$primary: #ff7175;
-$secondary: #233240;
-
-$black: #000;
-$grey: #bdc1c5;
-$white: #fff;
-
-$regular: 400;
-$semiBold: 600;
+@import "variables";
 
 /* ==========================================================================
    Base
