--- a/src/public/styles/components/_modal.scss
+++ b/src/public/styles/components/_modal.scss
@@ -34,8 +34,8 @@
    ========================================================================== */
 
 .modal header {
-  border-bottom: 1px solid rgba($secondary, .1);
-  padding: 2.4rem;
+  border-bottom: 1px solid rgba($secondary, .08);
+  padding: 2.1rem 2.4rem;
 }
 
 .modal header:empty {
@@ -61,7 +61,7 @@
   color: rgba($secondary, .4);
   cursor: pointer;
   float: right;
-  font-size: 1.2rem;
+  line-height: 1.6rem;
 }
 
 .modal .modal-close:hover {
@@ -72,7 +72,7 @@
    ========================================================================== */
 
 .modal section {
-  padding: 2.4rem 4.8rem 5.2rem 2.4rem;
+  padding: 2.1rem 4.4rem 6rem 2.2rem;
 }
 
 .modal section:empty {
