New background for demos #30

--- a/src/public/styles/docs.scss
+++ b/src/public/styles/docs.scss
@@ -60,7 +60,7 @@
    ========================================================================== */
 
 .docs-cell-demo-container {
-  background: #f4f8ff;
+  background: #233240;
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   transform-style: preserve-3d;
