--- a/src/public/styles/docs/_demo.scss
+++ b/src/public/styles/docs/_demo.scss
@@ -73,6 +73,14 @@
   width: 100%;
 }
 
+#formInput label {
+  color: rgba($white, .7);
+}
+
+#formInput .form-field-aux {
+  color: rgba($white, .4);
+}
+
 /* Icon
    ========================================================================== */
 
@@ -80,6 +88,7 @@
 #icon12x12 [class*="icon-12-"],
 #icon16x16 [class^="icon-16-"],
 #icon16x16 [class*="icon-16-"] {
+  color: #fff;
   display: inline-flex;
   padding: .1rem;
 }
@@ -89,12 +98,11 @@
 
 #grid .column,
 #grid .columns {
-  background: rgba($primary, .1);
+  background: rgba($primary, .5);
   border-radius: 0.2rem;
   color: $primary;
   font-size: 1rem;
   font-weight: 600;
-  letter-spacing: .1rem;
   line-height: 2.4rem;
   margin-bottom: .75rem;
   text-align: center;
