Uses icon-12 for small avatar icons and sets font size hard coded #44

--- a/src/public/styles/components/_avatar.scss
+++ b/src/public/styles/components/_avatar.scss
@@ -94,7 +94,7 @@ $large : 9.2rem;
 }
 
 .avatar-small span.avatar-icon {
-  font-size: $small/3;
+  font-size: 1.2rem;
   line-height: $small;
 }
 
@@ -105,7 +105,7 @@ $large : 9.2rem;
 }
 
 .avatar-medium span.avatar-icon {
-  font-size: $medium/3;
+  font-size: 1.6rem;
   line-height: $medium;
 }
 
@@ -116,6 +116,6 @@ $large : 9.2rem;
 }
 
 .avatar-large span.avatar-icon {
-  font-size: $large/3;
+  font-size: 3.2rem;
   line-height: $large;
 }
