--- a/src/public/styles/components/_modal.scss
+++ b/src/public/styles/components/_modal.scss
@@ -25,7 +25,7 @@
   @extend .cell;
   @extend .shadow-z2;
   display: inline-block;
-  max-width: 46.4rem;
+  width: 46.4rem;
   position: absolute;
   z-index: 1;
 }
@@ -75,6 +75,10 @@
   padding: 2.1rem 4.4rem 6rem 2.2rem;
 }
 
+.modal.dialog section {
+  padding: 2.1rem 4.4rem 6rem 2.2rem;
+}
+
 .modal section:empty {
   padding: 0;
 }
@@ -82,6 +86,10 @@
 .modal section p {
   color: rgba($secondary, .8);
   font-size: 1.2rem;
+}
+
+.modal.dialog section p {
+  font-size: 1.3rem;
 }
 
 .modal section p:last-child {
@@ -94,6 +102,10 @@
 .modal footer {
   padding: 1.2rem;
   text-align: right;
+}
+
+.modal.dialog footer {
+  padding: 1.2rem 1.2rem 1.2rem 1.2rem;
 }
 
 .modal footer:empty {
