Moving demo background back to lighter color

--- a/src/public/styles/components/_button.scss
+++ b/src/public/styles/components/_button.scss
@@ -47,7 +47,7 @@ input[type="button"]:focus {
 
 .btn.btn-secondary {
   color: $white;
-  background: $grey;
+  background: #bdc1c5;
 }
 
 /* Button · Disabled
