Applies new border line and shadow for cells #43

--- a/src/public/styles/components/_shadow.scss
+++ b/src/public/styles/components/_shadow.scss
@@ -2,9 +2,9 @@
    ========================================================================== */
 
 .shadow-z1 {
-  box-shadow: 0 2px 6px 0 rgba($black, 0.08);
+  box-shadow: 0 1px 1px rgba($black, 0.08);
 }
 
 .shadow-z2 {
-  box-shadow: 0 2px 8px 0 rgba($black, 0.16);
+  box-shadow: 0 2px 4px rgba($black, 0.12);
 }
