--- a/src/public/styles/components/_tooltip.scss
+++ b/src/public/styles/components/_tooltip.scss
@@ -1,9 +1,15 @@
+.tooltip-base {
+  @extend .shadow-z2;
+  background: $white;
+  border: 1px solid rgba($secondary, 0.12);
+  border-radius: 0.4rem;
+}
+
 /* Tooltip
    ========================================================================== */
 
 .tooltip {
-  @extend .cell;
-  @extend .shadow-z1;
+  @extend .tooltip-base;
   color: rgba($secondary, .7);
   display: inline-block;
   font-size: 1.2rem;
@@ -16,8 +22,7 @@
    ========================================================================== */
 
 .tooltip-menu {
-  @extend .cell;
-  @extend .shadow-z1;
+  @extend .tooltip-base;
   display: inline-block;
   text-align: center;
   position: absolute;
