--- a/src/public/styles/docs/_demo.scss
+++ b/src/public/styles/docs/_demo.scss
@@ -106,3 +106,11 @@
   text-align: center;
   text-transform: uppercase;
 }
+
+/* Navigation · Sidebar
+   ========================================================================== */
+
+#navSidebar .sidebar {
+  display: inline-block;
+  margin: 0 .7rem;
+}
