--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -50,6 +50,10 @@ a:hover {
   border-radius: 0.2rem;
 }
 
+.semi-bold {
+  font-weight: $semiBold;
+}
+
 /* ==========================================================================
    Components
    ========================================================================== */
