--- a/src/public/styles/docs/_demo.scss
+++ b/src/public/styles/docs/_demo.scss
@@ -114,3 +114,10 @@
   display: inline-block;
   margin: 0 .7rem;
 }
+
+/* Typography · Font
+   ========================================================================== */
+
+#typographyFont h1 {
+  text-align: center;
+}
