--- a/src/public/styles/components/_typography.scss
+++ b/src/public/styles/components/_typography.scss
@@ -17,3 +17,27 @@ body {
 .semi-bold {
   font-weight: $semiBold;
 }
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.8rem;
+}
+
+h3 {
+  font-size: 1.6rem;
+}
+
+h4 {
+  font-size: 1.4rem;
+}
+
+h5 {
+  font-size: 1.3rem;
+}
+
+h6 {
+  font-size: 1.2rem;
+}
