--- a/src/public/styles/components/_navigation.scss
+++ b/src/public/styles/components/_navigation.scss
@@ -3,35 +3,37 @@
 
 .topbar {
   @extend .shadow-z1;
-  background: $primary;
-  height: 6.4rem;
+  background: $white;
+  height: 7.2rem;
+  overflow: hidden;
 }
 
 .topbar-list {
-  font-size: 0;
   list-style: none;
-  padding: 2rem 0;
+  font-size: 0;
+  margin: 0;
 }
 
 .topbar-item {
   display: inline-block;
-  font-size: 1.4rem;
   margin: 0 2rem;
 }
 
 .topbar-item:first-child {
-  margin-left: 3.2rem;
+  margin: 0 2rem 0 0;
+  width: 7.2rem;
 }
 
 .topbar-item:last-child {
   margin-right: 3.2rem;
+  padding: 2.6rem 0;
 }
 
-.topbar-item .avatar {
+.topbar-logo-link {
+  background: $primary;
   display: block;
-  height: 36px;
-  margin-top: -.6rem;
-  width: 36px;
+  font-size: 1.2rem;
+  padding: 2.6rem;
 }
 
 .topbar-logo {
@@ -40,19 +42,24 @@
 
 .topbar-link {
   @include anim(color);
-  color: rgba($white, .5);
-  font-size: 1.6rem;
+  color: rgba($secondary, .7);
+  font-size: 1.2rem;
   font-weight: $semiBold;
   text-decoration: none;
 }
 
-.topbar-link:hover {
-  color: rgba($white, .8);
-}
-
 .topbar-link-selected,
 .topbar-link-selected:hover {
-  color: $white;
+  color: $primary;
+  border-bottom: 2px solid $primary;
+  padding-bottom: 2.4rem;
+}
+
+.topbar-item .avatar {
+  display: block;
+  height: 36px;
+  margin-top: -.6rem;
+  width: 36px;
 }
 
 /* Navigation · Sidebar
