--- a/src/public/styles/components/_navigation.scss
+++ b/src/public/styles/components/_navigation.scss
@@ -83,11 +83,12 @@
 }
 
 .sidebar-item:first-child {
-  margin-top: 0
+  margin-top: 0;
   padding-top: 1.6rem;
 }
 
 .sidebar-item:last-child {
+  margin-bottom: 0;
   padding-bottom: 1.6rem;
 }
 
