--- a/src/public/styles/_demos.scss
+++ b/src/public/styles/_demos.scss
@@ -114,6 +114,10 @@
 	padding: 0 4rem;
 }
 
+#navTopbar .topbar {
+	margin: 2rem 0;
+}
+
 #navSidebar .sidebar {
 	display: inline-block;
 	margin: 0 .7rem;
