Adds List component

--- a/lib/styles/_base.scss
+++ b/lib/styles/_base.scss
@@ -44,6 +44,7 @@ a:hover {
 @import "cell";
 @import "form";
 @import "modal";
+@import "list";
 @import "navigation";
 @import "shadow";
 @import "tooltip";
