Implement DragDropUpload component
Fixes #56

--- a/lib/styles/_base.scss
+++ b/lib/styles/_base.scss
@@ -42,6 +42,7 @@ a:hover {
 @import "avatar";
 @import "button";
 @import "cell";
+@import "cell";
 @import "form";
 @import "modal";
 @import "navigation";
