Renames some css classes from List

--- a/lib/styles/_list.scss
+++ b/lib/styles/_list.scss
@@ -16,12 +16,12 @@
 	margin-left: 1.2rem;
 }
 
-.list .list-text {
+.list .list-text-primary {
 	color: rgba($secondary, .8);
 	font-size: 1.4rem;
 }
 
-.list .list-help {
+.list .list-text-secondary {
 	color: rgba($secondary, .4);
 	font-size: 1.2rem;
 }
