Implement AutoComplete component
Fixes #58

--- a/lib/styles/_base.scss
+++ b/lib/styles/_base.scss
@@ -39,6 +39,7 @@ a:hover {
 	 Components
 	 ========================================================================== */
 
+@import "autocomplete";
 @import "avatar";
 @import "button";
 @import "cell";
