Adds switcher on/off component styles

--- a/lib/styles/_base.scss
+++ b/lib/styles/_base.scss
@@ -60,6 +60,7 @@ a:hover {
 @import "list";
 @import "navigation";
 @import "shadow";
+@import "switcher";
 @import "tooltip";
 @import "treeView";
 @import "typography";
