--- a/lib/styles/_base.scss
+++ b/lib/styles/_base.scss
@@ -21,6 +21,7 @@ a:hover {
 	transform: translateX(-50%) translateY(-50%);
 	-webkit-transform: translateX(-50%) translateY(-50%);
 	-ms-transform: translateX(-50%) translateY(-50%);
+	-webkit-backface-visibility: hidden;
 }
 
 .round {
