--- a/lib/styles/_switcher.scss
+++ b/lib/styles/_switcher.scss
@@ -6,6 +6,9 @@
 	border: .1rem solid rgba($secondary, .2);
 	height: 2.4rem;
 	width: 4.2rem;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 }
 
 .switcher-control {
