Reviews switcher component

--- a/lib/styles/_switcher.scss
+++ b/lib/styles/_switcher.scss
@@ -2,10 +2,10 @@
 	 ========================================================================== */
 
 .switcher {
-	border-radius: 1.3rem;
+	border-radius: 1.2rem;
 	border: .1rem solid rgba($secondary, .2);
-	height: 2.4rem;
-	width: 4.2rem;
+	height: 2.2rem;
+	width: 4rem;
 	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
@@ -16,6 +16,7 @@
 	border-radius: 50%;
 	float: left;
 	height: 2.4rem;
+	margin: -.1rem 0 0 -.1rem;
 	width: 2.4rem;
 }
 
@@ -36,6 +37,7 @@
 .switcher-on .switcher-control {
 	background: $primary;
 	float: right;
+	margin: -.1rem -.1rem 0 0;
 }
 
 .switcher-on .switcher-control-icon {
