--- a/lib/styles/_autocomplete.scss
+++ b/lib/styles/_autocomplete.scss
@@ -1,10 +1,27 @@
 .autocomplete {
+	@include box-shadow(0 2px 8px rgba(0, 0, 0, 0.16));
 	background-color: #fff;
+	margin-top: 4px;
+	border: 1px transparent;
+	border-radius: 2px;
 	overflow: hidden;
 	position: absolute;
 	z-index: 1;
 
 	&.hidden {
 		display: none;
+	}
+
+	.list {
+		padding-bottom: 12px;
+		padding-top: 12px;
+
+		.list-item:hover {
+			background-color: #edf4fd;
+		}
+
+		ul {
+			margin-bottom: 0;
+		}
 	}
 }
